# showtracker-py

./: .gitignore  PKGBUILD  README.md  pyproject.toml  showtracker.py
.github/: copilot-instructions.md
pkg/showtracker/: .BUILDINFO  .MTREE  .PKGINFO
pkg/showtracker/usr/share/doc/showtracker/: README.md
src/: README.md  showtracker.py
tests/: conftest.py  test_migrations.py  test_parse_and_match.py
